--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.17.1",
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "pg": "^8.3.3"
   }
 }
