--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
-    "test": "jest --config ./jest.config.js"
+    "test:unit": "jest --config ./jest.config.js ",
+    "test:coverage": "jest --config ./jest.config.js --collect-coverage"
   },
   "author": "",
   "license": "ISC",
